--- a/package.json
+++ b/package.json
@@ -80,5 +80,12 @@
       "es2015",
       "stage-2"
     ]
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "async": "^2.6.1",
+    "nodemailer": "^4.6.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "sendgrid": "^1.5.0"
   }
 }
